@@ -560,6 +560,9 @@ Release 2.7.0 - UNRELEASED
 
     HADOOP-10482. Fix various findbugs warnings in hadoop-common. (wheat9)
 
+    HADOOP-11388. Remove deprecated o.a.h.metrics.file.FileContext.
+    (Li Lu via wheat9)
+
 Release 2.6.0 - 2014-11-18
 
   INCOMPATIBLE CHANGES
